refactor: rename file type to format
